--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "barryvdh/laravel-dompdf": "^0.8.7",
         "doctrine/dbal": "^2.0",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^1.0",
